package com.franciscoreina.spring7.domain.milk;

public enum MilkType {
    A2,
    GOAT,
    HIGH_PROTEIN,
    LACTOSE_FREE,
    ORGANIC_WHOLE,
    SEMI_SKIMMED,
    SKIMMED,
    WHOLE
}
