classDiagram
 class Customer {
  UUID id
  Integer version
  Instant createdAt
  Instant updatedAt
  String name
  String email
 }

 class MilkOrder {
  UUID id
  Integer version
  Instant createdAt
  Instant updatedAt
  String customerRef
  BigDecimal paymentAmount
  MilkOrderStatus milkOrderStatus
  Customer customer
  Set<OrderLine> orderLines
  OrderShipment orderShipment
  createMilkOrder(Customer, String customerRef)$ MilkOrder
  addOrderLine(OrderLine)
  removeOrderLine(OrderLine)
  updateOrderLineQuantity(OrderLine, Integer quantity)
  addOrderShipment(OrderShipment)
 }

 class OrderLine {
  UUID id
  Integer version
  Instant createdAt
  Instant updatedAt
  Integer requestedQuantity
  Integer assignedQuantity
  OrderLineStatus orderLineStatus
  BigDecimal priceAtPurchase
  MilkOrder milkOrder
  Milk milk
  createOrderLine(Milk, Integer quantity)$ OrderLine
  assignQuantity(Integer quantity)
  allocateUpTo(Integer availableStock)
 }

 class OrderLineStatus {
  <<enumeration>>
  NEW
  PARTIALLY_ALLOCATED
  FULLY_ALLOCATED
  OUT_OF_STOCK
 }

 class OrderShipment {
  UUID id
  Integer version
  Instant createdAt
  Instant updatedAt
  String trackingNumber
  MilkOrder milkOrder
  createOrderLine(String trackingNumber)$ OrderShipment
  updateTrackingNumber(String trackingNumber)
 }

 class Milk {
  UUID id
  Integer version
  Instant createdAt
  Instant updatedAt
  String name
  MilkType milkType
  String upc
  BigDecimal price
  Integer stock
  Set<Category> categories
  renameTo(String newName)
  updateMilkType(MilkType newMilkType)
  updateUpc(String newUpc)
  updatePrice(BigDecimal newPrice)
  updateStock(Integer newStock)
  decreaseStock(Integer amount)
  createMilk(String name, MilkType, String upc, BigDecimal price, Integer stock, Set<Category>)$ Milk
  addCategory(Category)
  removeCategory(Category)
  replaceCategories(Set<Category>)
 }

 class MilkType {
  <<enumeration>>
  A2
  GOAT
  HIGH_PROTEIN
  LACTOSE_FREE
  ORGANIC_WHOLE
  SEMI_SKIMMED
  SKIMMED
  WHOLE
 }

 class Category {
  UUID id
  Integer version
  Instant createdAt
  Instant updatedAt
  String description
  createCategory(String description)$ Category
  changeDescriptionTo(String description)
 }

 Customer "1" --> "0..*" MilkOrder : places
 MilkOrder "1" *--> "0..*" OrderLine : contains
 MilkOrder "1" *--> "0..1" OrderShipment : shipment
 OrderLine "0..*" --> "1" Milk : references
 OrderLine --> OrderLineStatus : status
 Milk "0..*" <--> "0..*" Category : belongs to
 Milk --> MilkType : type